--- a/css/style2.css
+++ b/css/style2.css
@@ -643,7 +643,6 @@ html {
     .header-title {
         font-size: 42px;
     }
-
     
     .regions-slider {
         max-width: 900px;
@@ -679,7 +678,6 @@ html {
         margin-left: 11px;
     }
 
-    
     .hotels-section {
         padding: 70px 0;
     }
@@ -761,7 +759,6 @@ html {
     .header-title {
         font-size: 38px;
     }
-
     
     .regions-slider {
         max-width: 800px;
@@ -939,7 +936,6 @@ html {
         font-size: 28px;
         line-height: 1.4;
     }
-
     
     .tours-section {
         padding: 60px 0 80px;
@@ -979,13 +975,13 @@ html {
     .regions-slider .slick-prev {
         left: 235px;
         background-size: 42px;
-        margin-top: 177px;
+        margin-top: 215px;
     }
 
     .regions-slider .slick-next {
         right: 235px;
         background-size: 42px;
-        margin-top: 177px;
+        margin-top: 215px;
     }
 
     .region-slide {
@@ -1027,7 +1023,6 @@ html {
         font-size: 12px;
     }
 
-    
     .hotels-section {
         padding: 50px 0;
     }
@@ -1076,7 +1071,6 @@ html {
     .hotel-price {
         font-size: 18px;
     }
-
     
     .reservation-section {
         padding: -15px 0 0;
@@ -1111,6 +1105,399 @@ html {
         padding: 16px 30px;
         font-size: 18px;
         margin: 15px auto 0;
+    }
+}
+
+
+@media (max-width: 725px) {
+    .header {
+        min-height: 450px;
+        padding: 20px 0;
+    }
+    
+    .navbar {
+        flex-direction: column;
+        gap: 15px;
+        padding: 15px 20px;
+    }
+    
+    .nav-menu {
+        gap: 25px;
+        width: 100%;
+        justify-content: center;
+    }
+    
+    .header-content {
+        padding-top: 140px;
+    }
+    
+    .header-title {
+        font-size: 30px;
+    }
+    
+    .header-text {
+        font-size: 28px;
+    }
+    
+    .regions-slider .slick-prev {
+        left: 180px;
+        margin-top: 200px;
+    }
+    
+    .regions-slider .slick-next {
+        right: 180px;
+        margin-top: 200px;
+    }
+    
+    .region-slide {
+        width: 180px;
+        height: 280px;
+    }
+    
+    .region-content {
+        margin-top: 85px;
+        margin-left: 30px;
+        gap: 5px;
+    }
+    
+    .region-title {
+        font-size: 20px;
+    }
+    
+    .content-title {
+        font-size: 18px;
+    }
+    
+    .all-hotels {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .hotel-card {
+        width: 280px;
+    }
+    
+    .hotel-block {
+        width: 280px;
+        height: 350px;
+    }
+    
+    .reservation-form {
+        gap: 20px;
+    }
+    
+    .form-label {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 665px) {
+    .header-title {
+        font-size: 30px;
+    }
+    
+    .header-text {
+        font-size: 28px;
+    }
+
+    .regions-slider .slick-prev {
+        left: 155px;
+        margin-top: 206px;
+    }
+    
+    .regions-slider .slick-next {
+        right: 155px;
+        margin-top: 206px;
+    }
+    
+    .region-content {
+        margin-top: 60px;
+        margin-left: 24px;
+        gap: 5px;
+    }
+
+    .region-title {
+        font-size: 20px;
+    }
+    
+    .content-title {
+        font-size: 16px;
+    }
+    
+    .all-hotels {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .hotel-card {
+        width: 280px;
+    }
+    
+    .hotel-block {
+        width: 280px;
+        height: 350px;
+    }
+    
+    .reservation-form {
+        gap: 20px;
+    }
+    
+    .form-label {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 600px) {
+    .header-title {
+        font-size: 30px;
+    }
+    
+    .header-text {
+        font-size: 28px;
+    }
+
+    .regions-slider .slick-prev {
+        left: 160px;
+        margin-top: 195px;
+    }
+    
+    .regions-slider .slick-next {
+        right: 160px;
+        margin-top: 195px;
+    }
+    
+    .region-content {
+        margin-top: 50px;
+        margin-left: 24px;
+        gap: 5px;
+    }
+
+    .region-title {
+        font-size: 20px;
+    }
+    
+    .content-title {
+        font-size: 16px;
+    }
+    
+    .all-hotels {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .hotel-card {
+        width: 280px;
+    }
+    
+    .hotel-block {
+        width: 280px;
+        height: 350px;
+    }
+    
+    .reservation-form {
+        gap: 20px;
+    }
+    
+    .form-label {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 575px) {
+    .header-title {
+        font-size: 30px;
+    }
+    
+    .header-text {
+        font-size: 28px;
+    }
+
+    .regions-slider .slick-prev {
+        left: 120px;
+        margin-top: 195px;
+    }
+    
+    .regions-slider .slick-next {
+        right: 120px;
+        margin-top: 195px;
+    }
+    
+    .region-content {
+        margin-top: 30px;
+        margin-left: 18px;
+        gap: 5px;
+    }
+
+    .region-title {
+        font-size: 20px;
+    }
+    
+    .content-title {
+        font-size: 15px;
+    }
+    
+    .all-hotels {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .hotel-card {
+        width: 280px;
+    }
+    
+    .hotel-block {
+        width: 280px;
+        height: 350px;
+    }
+    
+    .reservation-form {
+        gap: 20px;
+    }
+    
+    .form-label {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 530px) {
+    .header-title {
+        font-size: 30px;
+    }
+    
+    .header-text {
+        font-size: 28px;
+    }
+
+    .regions-slider .slick-prev {
+        left: 120px;
+        margin-top: 170px;
+    }
+    
+    .regions-slider .slick-next {
+        right: 120px;
+        margin-top: 170px;
+    }
+    
+    .region-content {
+        margin-top: 22px;
+        margin-left: 20px;
+        gap: 5px;
+    }
+
+    .region-title {
+        font-size: 18px;
+    }
+    
+    .content-title {
+        font-size: 14px;
+    }
+    
+    .all-hotels {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .hotel-card {
+        width: 280px;
+    }
+    
+    .hotel-block {
+        width: 280px;
+        height: 350px;
+    }
+    
+    .reservation-form {
+        gap: 20px;
+    }
+    
+    .form-label {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 500px) {
+    .header {
+        min-height: 400px;
+        padding: 15px 0;
+    }
+    
+    .nav-menu {
+        gap: 20px;
+    }
+    
+    .nav-link {
+        font-size: 16px;
+    }
+    
+    .header-content {
+        padding-top: 120px;
+    }
+    
+    .header-title {
+        font-size: 26px;
+    }
+    
+    .header-text {
+        font-size: 24px;
+    }
+    
+    .tours-header {
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+    .header-title {
+        font-size: 28px;
+    }
+    
+    .regions-slider .slick-prev {
+        left: 130px;
+        margin-top: 130px;
+    }
+    
+    .regions-slider .slick-next {
+        right: 130px;
+        margin-top: 130px;
+    }
+    
+    .region-slide {
+        width: 150px;
+        height: 240px;
+    }
+    
+    .region-content {
+        margin-top: 20px;
+        margin-left: 17px;
+    }
+    
+    .region-title {
+        font-size: 18px;
+    }
+    
+    .content-title {
+        font-size: 12px;
+    }
+    
+    .all {
+        gap: 10px;
+    }
+    
+    .hotels-subtitle h3 {
+        font-size: 24px;
+    }
+    
+    .hotel-name {
+        font-size: 18px;
+    }
+    
+    .reservation-header {
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+    .form-select, .form-date {
+        padding: 10px 12px;
+        font-size: 14px;
     }
 }
 
@@ -1174,7 +1561,6 @@ html {
         font-size: 18px;
         line-height: 1.3;
     }
-
     
     .tours-section {
         padding: 30px 0 96px;
@@ -1194,7 +1580,6 @@ html {
         font-size: 24px;
         text-align: center;
     }
-
     
     .regions-slider {
         max-width: 100%;
@@ -1240,9 +1625,9 @@ html {
     }
 
     .region-content {
-        margin-top: 67px;
-        margin-left: 22px;
-        gap: 2px;
+        margin-top: 45px;
+        margin-left: 28px;
+        gap: 4px;
     }
 
     .stars {
@@ -1279,7 +1664,6 @@ html {
     .seats-left {
         margin: 5px 0 0 0;
     }
-
     
     .hotels-section {
         padding: 30px 0;
@@ -1337,18 +1721,16 @@ html {
         font-size: 14px;
     }
 
-
     .reservation-section {
         padding: 90px 0 0;
     }
 }
 
 
-@media (max-width: 420px) {
+@media (max-width: 430px) {
     body {
         font-size: 12px;
     }
-
     
     .header {
         min-height: 400px;
@@ -1407,7 +1789,6 @@ html {
         font-size: 20px;
         line-height: 1.3;
     }
-
     
     .tours-section {
         padding: 40px 0 60px;
@@ -1428,7 +1809,6 @@ html {
         text-align: center;
     }
 
-    
     .regions-slider {
         max-width: 100%;
     }
@@ -1476,9 +1856,9 @@ html {
     }
 
     .region-content {
-        margin-top: 45px;
-        margin-bottom: 20px;
-        gap: 3px;
+        margin-top: 35px;
+        margin-left: 21px;
+        gap: 2px;
     }
 
     .stars {
@@ -1506,7 +1886,6 @@ html {
         margin: 0;
         font-size: 10px;
     }
-
     
     .hotels-section {
         padding: 40px 0;
@@ -1560,7 +1939,6 @@ html {
     .hotel-price {
         font-size: 16px;
     }
-
     
     .reservation-section {
         padding: 85px 0 0;
@@ -1599,8 +1977,77 @@ html {
     }
 }
 
+@media (max-width: 375px) {
 
-@media (max-width: 320px) {
+    .regions-slider .slick-arrow {
+        width: 30px;
+        height: 30px;
+    }
+
+    .regions-slider .slick-prev {
+        left: 20%;
+        transform: translateX(-50%);
+        margin-top: 320px;
+        background-size: 30px;
+        top: auto;
+        bottom: -50px;
+    }
+
+    .regions-slider .slick-next {
+        right: 20%;
+        transform: translateX(50%);
+        margin-top: 320px;
+        background-size: 30px;
+        top: auto;
+        bottom: -50px;
+    }
+
+    .region-slide {
+        width: 100px;
+        height: 300px;
+        padding: 0px;
+    }
+
+    .region-title {
+        font-size: 12px;
+        margin: 5px 0 10px;
+    }
+
+    .region-content {
+        margin-top: 25px;
+        margin-left: 15px;
+        gap: 1px;
+    }
+
+    .stars {
+        width: 50px;
+    }
+
+    .content-title {
+        font-size: 10px;
+    }
+
+    .tour, .days-left {
+        gap: 3px;
+    }
+
+    .all {
+        gap: 10px;
+    }
+
+    .small_img {
+        width: 9px;
+        height: 9px;
+    }
+
+    .contect-text, .seats-left {
+        margin: 0;
+        font-size: 10px;
+    }
+}
+
+
+@media (max-width: 335px) {
     .header {
         min-height: 280px;
         padding: 8px 0;
@@ -1719,9 +2166,9 @@ html {
     }
 
     .region-content {
-        margin-top: 21px;
-        margin-left: 18px;
-        gap: 1px;
+        margin-top: 26px;
+        margin-left: 20px;
+        gap: 3px;
     }
 
     .stars {
@@ -1736,7 +2183,7 @@ html {
 
     .all {
         gap: 5px;
-        flex-direction: column;
+        flex-direction: row;
         align-items: flex-start;
     }
 
